--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
-  "name": "nmn-extension-foreign-0.8",
-  "repositoryName": "NmN's Foreign Extensions (0.8)",
+  "name": "nmn-extension-ita",
+  "repositoryName": "NmN's Ita Extensions (0.8)",
   "version": "2.0.0",
   "description": "Repo for non-english manga sources. (0.8)",
   "main": "index.js",
   "scripts": {
     "bundle": "npx paperback bundle",
     "serve": "npx paperback serve",
-    "debug": "npx paperback logcat --ip=192.168.29.226",
     "test": "node_modules/.bin/mocha --timeout 300000 -r ts-node/register src/**/*.test.ts"
   },
   "author": "NmN",
